[package]
name = "tinykv"
version = "0.1.0"
edition = "2021"
authors = ["ahseal <last59s@hotmail.com>"]
publish = false
description = "A tiny database of key-value pairs based on the Bitcask model"

[dependencies]
bytes = "1.5.0"
crc32fast = "1.3.2"
parking_lot = "0.12.1"
prost = "0.12.1"
thiserror = "1.0.50"
tracing = "0.1.40"
